# HEVCImageViewer

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/fengweilun/hevcimageviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ImageCodec.cpp  ImageCodec.h  native_show.cpp  threadpool.cpp  threadpool.h  utils.h
app/src/main/cpp/include/: lenthevcdec.h
app/src/main/java/com/example/fengweilun/hevcimageviewer/: MainActivity.java  MyGLSurfaceView.java  MyRender.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fengweilun/hevcimageviewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
